[package]
name = "bevy_cleancut"
version = "0.2.0"
edition = "2021"
description = "Random utility stuff for bevy for my personal use. You're welcome to use it, too, if you like."
homepage = "https://github.com/CleanCut/bevy_cleancut"
repository = "https://github.com/CleanCut/bevy_cleancut"
readme = "README.md"
keywords = [ "game", "cleancut", "graphics", "plugin", "bevy" ]
categories = [ "game-development" ]
license = "MIT OR Apache-2.0"


[dependencies]
bevy = "0.14.1"
bevy_particle_systems = "0.13.0"
bevy_rapier2d = "0.27.0"
rand = "0.8.5"
